--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ html{
 /* SECCION INICIO */
 .inicio{
     background: linear-gradient(rgba(0,0,0.3), rgba(0,0,0,.3)),
-    url("circuito.jpg");
+    url("images/background1.jpg");
     background-size: cover;
     background-position: center center;
     color: #fff;
@@ -25,29 +25,40 @@ html{
     text-align: center;
     padding: 0 10px;
 }
-inicio .contenido-seccion header{
+.inicio .contenido-seccion header{
     padding: 30px;
 }
-/* menu lateral*/
-.inicio .contenido-seccion header nav{
+/* menu lateral */
+.inicio .contenido-seccion header nav {
     position: fixed;
     margin-left: 60px;
-    background-color: #940253;
+    background-color: #032e8b;
     padding: 15px;
     border-radius: 10px;
     text-align: left;
     z-index: 99;
-    display: none;
+    overflow: hidden; /* Necesario para animar la altura */
+    transition: max-height 0.5s ease-out, padding 0.5s ease-out; /* Transición suave */
+    max-height: 0; /* Altura inicial (cerrado) */
+    padding: 0 15px; /* Padding horizontal fijo, padding vertical cero */
 }
 
-.inicio .contenido-seccion header nav a{
+/* Efecto visible */
+.inicio .contenido-seccion header nav.visible {
+    padding: 15px; /* Padding completo cuando el menú está visible */
+}
+
+/* Opciones del menú */
+.inicio .contenido-seccion header nav a {
     display: block;
     color: #fff;
     text-decoration: none;
     margin-bottom: 10px;
     font-weight: bold;
+    opacity: 0; /* Opcional: Inicialmente ocultar los enlaces para animar su aparición */
+    transition: opacity 0.5s ease-out; /* Transición suave para la aparición de los enlaces */
 }
-/* ******* */
+/* ****** */
 .inicio .contenido-seccion header .logo{
     font-weight: bold;
     font-size: 2.5rem;
@@ -55,12 +66,12 @@ inicio .contenido-seccion header{
     text-shadow: 0 0 35px #fff;
 }
 .inicio .contenido-seccion header .logo .color{
-    color: #940253;
+    color: #0d3385;
     font-family: "Yellowtail";
 }
 .inicio .contenido-seccion header .nav-bar{
     position: fixed;
-    background-color: #940253;
+    background-color: #0d3385;
     font-size: 20px;
     width: 50px;
     height: 50px;
@@ -70,9 +81,9 @@ inicio .contenido-seccion header{
     transition: .3s;
 }
 .inicio .contenido-seccion header .nav-bar:hover{
-    box-shadow:  0 0 35px #fff;
+    box-shadow: 0 0 35px #fff;
 }
-.inicio.contenido-seccion .info{
+.inicio .contenido-seccion .info{
     padding-bottom: 130px;
 }
 .inicio .contenido-seccion .info h1{
@@ -92,18 +103,18 @@ inicio .contenido-seccion header{
     display: inline-block;
     text-decoration: none;
     background-color: #000;
-    color: #940253;
-    border: 1px solid #940253;
+    color: #0d3385;
+    border: 1px solid #0d3385;
     border-radius: 50%;
     width: 40px;
-    height:  40px;
+    height: 40px;
     line-height: 40px;
     margin: 0 5px;
     transition: .3s;
 }
 .inicio .contenido-seccion .info .redes a:hover{
     color: #fff;
-    background-color: #940253;
+    background-color: #0d3385;
     box-shadow: 0 0 20px #fff;
 }
 .inicio .contenido-seccion .foto{
@@ -112,22 +123,21 @@ inicio .contenido-seccion header{
 .inicio .contenido-seccion .foto img{
     max-width: 200px;
     border-radius: 50%;
-    border: 5px solid #940253;
+    border: 5px solid #0d3385;
     position: absolute;
     left: 50%;
     top: -100px;
     transform: translateX(-50%);
 }
-/* estilos generales*/
+/* estilos generales */
 .titulo-seccion{
     font-family: "Yellowtail";
     font-size: 1.5rem;
 }
-/*
- SECCION SOBRE MI */
+/* SECCION SOBRE MI */
 .sobremi{
     background-color: #e6e6e6;
-    padding: 140 px 0 100px 0;
+    padding: 140px 0 100px 0;
     text-align: center;
 }
 .sobremi .contenido-seccion{
@@ -140,7 +150,7 @@ inicio .contenido-seccion header{
     font-size: 30px;
 }
 .sobremi .contenido-seccion .especial{
-    color: #940253;
+    color: #0d3385;
     font-weight: bold;
     margin-top: 15px;
 }
@@ -158,20 +168,20 @@ inicio .contenido-seccion header{
     width: 30%;
 }
 .sobremi .contenido-seccion .fila .col i{
-    color: #940253;
+    color: #0d3385;
     display: inline-block;
     width: 40px;
     height: 40px;
-    border: 2px solid #940253;
+    border: 2px solid #0d3385;
     line-height: 40px;
     border-radius: 50%;
 }
-.sobremi .contenido-seccion.fila .col span{
+.sobremi .contenido-seccion .fila .col span{
     display: block;
     font-weight: bold;
     margin: 8px 0;
 }
-/* SECCIÓN HABILIDADES*/
+/* SECCION HABILIDADES */
 .habilidades{
     padding: 80px 0 100px 0;
     text-align: center;
@@ -206,7 +216,7 @@ inicio .contenido-seccion header{
 }
 .habilidades .contenido-seccion .barra{
     display: flex;
-    border: 1px solid #940253;
+    border: 1px solid #0d3385;
     padding: 2px;
     border-radius: 3px;
     margin-right: 10px;
@@ -243,9 +253,9 @@ inicio .contenido-seccion header{
 }
 .resumen .contenido-seccion .info .col .titulo{
     display: inline-block;
-    color: #940253;
+    color: #0d3385;
     font-weight: bold;
-    border: 2px solid #940253;
+    border: 2px solid #0d3385;
     padding: 10px;
 
 }
@@ -269,11 +279,76 @@ inicio .contenido-seccion header{
 }
 .resumen .contenido-seccion .info .col table .promedio{
     display: block;
-    color: #940253;
+    color: #0d3385;
     margin-top: 10px;
     font-weight: bold;
 }
 .resumen .contenido-seccion .info .col table .descripcion{
     border-left: 1px solid #bab9b9;
     padding-left: 20px;
+}
+/* SECCION CONTACTO */
+.contacto{
+    background-color: #202020;
+    padding: 140px 0 100px 0;
+    color: #e6e6e6;
+    text-align: center;
+}
+.contacto .contenido-seccion{
+    max-width: 1000px;
+    margin: auto;
+    padding: 0 10px;
+}
+.contacto .contenido-seccion h3{
+    text-transform: uppercase;
+    font-size: 30px;
+}
+.contacto .contenido-seccion .fila{
+    display: flex;
+    justify-content: space-around;
+}
+.contacto .contenido-seccion .fila .col{
+    margin-top: 50px;
+}
+.contacto .contenido-seccion .fila .col h2{
+    color: #0d3385;
+}
+/* SECCION RESPONSIVE */
+@media screen and (max-width:800px){
+    .habilidades .contenido-seccion .fila{
+        display: block;
+    }
+    .habilidades .contenido-seccion .fila .col{
+        width: 100%;
+        text-align: center;
+    }
+    .habilidades .contenido-seccion .fila .col .cont-barra{
+        justify-content: center;
+    }
+    .sobremi .contenido-seccion .fila{
+        display: block;
+    }
+    .sobremi .contenido-seccion .fila .col{
+        width: 80%;
+        margin: auto;
+        margin-top: 20px;
+    }
+    .resumen .contenido-seccion .info{
+        display: block;
+    }
+    .resumen .contenido-seccion .info .col{
+        width: 90%;
+        margin: auto;
+    }
+    .resumen .contenido-seccion .info .col .titulo{
+        display: block;
+        text-align: center;
+    }
+    .resumen .contenido-seccion .info .col table{
+        margin-top: 10px;
+        margin-bottom: 30px;
+    }
+    .contacto .contenido-seccion .fila{
+        display: block;
+    }
 }
